fix table alignment

--- a/frontend/valius/src/styles/components/EvaluationProcess/_evaluationProcess.scss
+++ b/frontend/valius/src/styles/components/EvaluationProcess/_evaluationProcess.scss
@@ -42,6 +42,9 @@
                     height: 20px;
                 }
             }
+            td {
+                text-align: center;
+            }
         }
 
         &__factor {
